Potential fix for the UID permission issue with volume mounts
See:
https://docs.docker.com/reference/dockerfile/#arg
https://devops.stackexchange.com/questions/12713/docker-mounts-files-as-uid-1001
https://www.joyfulbikeshedding.com/blog/2021-03-15-docker-and-the-host-filesystem-owner-matching-problem.html

--- a/depends/docker/Makefile
+++ b/depends/docker/Makefile
@@ -2,8 +2,6 @@ TARGETS = \
 	s2e \
 	systemtap
 
-PUSH_TARGETS = $(TARGETS:%=%-push)
-
 CONTAINERS := $(shell docker ps -a -q)
 NON_TAGGED_IMGS := $(shell docker images | grep '<none>' | awk -F ' ' '{print $$3}')
 IMAGES := $(shell docker images -q)
@@ -11,17 +9,12 @@ S2E_REPO_DIR := $(shell realpath ../../s2e)
 
 all: $(TARGETS)
 
-push: $(PUSH_TARGETS)
-
 s2e:
-	docker build -t kyechou/$@:latest ./$@
+	docker build --build-arg UID=$(shell id -u) --build-arg GID=$(shell id -g) -t $@:latest ./$@
 
 systemtap:
 	cp $(S2E_REPO_DIR)/s2e/images/.tmp-output/linux-4.9.3-x86_64/*.deb ./$@/
-	docker build -t kyechou/$@:latest ./$@
-
-$(PUSH_TARGETS):
-	docker push kyechou/$(@:%-push=%):latest
+	docker build -t $@:latest ./$@
 
 clean:
 	@[ -z "$(CONTAINERS)" ] || docker rm -f $(CONTAINERS)
@@ -31,4 +24,4 @@ cleanall:
 	@[ -z "$(CONTAINERS)" ] || docker rm -f $(CONTAINERS)
 	@[ -z "$(IMAGES)" ] || docker rmi -f $(IMAGES)
 
-.PHONY: all push $(TARGETS) $(PUSH_TARGETS) clean cleanall
+.PHONY: all push $(TARGETS) clean cleanall
