--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -31,8 +31,8 @@ set(DEMO_RTR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/demo-routers)
 FILE(GLOB_RECURSE DEMO_RTR_SRCS CONFIGURE_DEPENDS ${DEMO_RTR_DIR}/*.cpp)
 foreach(RTR_SRC ${DEMO_RTR_SRCS})
     get_filename_component(STEM ${RTR_SRC} NAME_WE)
-    add_executable(demo-${STEM} ${RTR_SRC} $<TARGET_OBJECTS:mimesis_libs>)
-    target_link_libraries(demo-${STEM} PRIVATE mimesis_libs)
+    add_executable(demo-${STEM} ${RTR_SRC} $<TARGET_OBJECTS:_logger> $<TARGET_OBJECTS:_net>)
+    target_link_libraries(demo-${STEM} PRIVATE _logger _net)
 endforeach()
 
 set(HELLO_WORLD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/hello-world)
