Add tests for libps bdd

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,9 +9,11 @@ find_package(GTest REQUIRED)
 # Build libps_tests
 #
 FILE(GLOB_RECURSE LIBPS_TESTS_SRCS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/libps/*.cpp)
-add_executable(libps_tests ${LIBPS_TESTS_SRCS})
+add_executable(libps_tests ${LIBPS_TESTS_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/util.cpp)
+target_include_directories(libps_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(libps_tests PRIVATE
     ps
     gtest::gtest
 )
 add_test(NAME "libps_tests" COMMAND libps_tests)
+set_tests_properties(libps_tests PROPERTIES ENVIRONMENT "DATA_DIR=${CMAKE_CURRENT_SOURCE_DIR}/data")
