--- a/depends/docker/s2e/Dockerfile
+++ b/depends/docker/s2e/Dockerfile
@@ -23,8 +23,8 @@ RUN dpkg --add-architecture i386 && \
     libc6-dev-i386 binutils-dev libboost-system-dev libboost-serialization-dev \
     libboost-regex-dev libbsd-dev libpixman-1-dev libglib2.0-dev \
     libglib2.0-dev:i386 python3-docutils libpng-dev gcc-multilib g++-multilib \
-    libcapstone-dev libsoci-dev rapidjson-dev libgtest-dev libprotobuf-dev \
-    fuse3 wine-stable \
+    libcapstone-dev libsoci-dev rapidjson-dev libgtest-dev libgmock-dev \
+    libprotobuf-dev fuse3 wine-stable \
     # S2E image build dependencies
     libguestfs-tools genisoimage xz-utils docker.io p7zip-full libhivex-bin \
     jigdo-file cloud-image-utils linux-image-generic \
