--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -34,5 +34,13 @@ foreach(RTR_SRC ${DEMO_RTR_SRCS})
     target_link_libraries(demo-${STEM} PRIVATE _logger _net)
 endforeach()
 
+set(DPDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dpdk)
+FILE(GLOB DPDK_APPS CONFIGURE_DEPENDS ${DPDK_DIR}/*.c ${DPDK_DIR}/*.cpp)
+foreach(DPDK_APP ${DPDK_APPS})
+    get_filename_component(STEM ${DPDK_APP} NAME_WE)
+    add_executable(dpdk-${STEM} ${DPDK_APP} $<TARGET_OBJECTS:_logger> $<TARGET_OBJECTS:_net>)
+    target_link_libraries(dpdk-${STEM} PRIVATE dpdk _logger _net)
+endforeach()
+
 set(HELLO_WORLD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/hello-world)
 add_executable(hello-world-1 ${HELLO_WORLD_DIR}/hw1.cpp)
