Revert to kernel 4.9.3 and enable uprobe

--- a/depends/docker/systemtap/Dockerfile
+++ b/depends/docker/systemtap/Dockerfile
@@ -1,6 +1,6 @@
 # This is used to compile the systemtap scripts.
 
-FROM debian:12.5
+FROM debian:9.3
 
 LABEL org.opencontainers.image.authors="kychou2@illinois.edu"
 
@@ -11,16 +11,15 @@ RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     sudo apt-file flex bison patch python python-setuptools unzip git bc bzip2 \
     wget less g++ gcc file libc6-dev make fakeroot build-essential devscripts \
-    libncurses5-dev pahole libdw-dev elfutils gettext rsync cpio kmod \
-    libssl-dev debhelper-compat && \
+    libncurses5-dev libdw-dev elfutils gettext apt-utils vim curl && \
     apt-get clean && \
     apt-file update
 
-ARG STAP_VER=5.1
+ARG STAP_VER=4.9
 
-RUN git clone https://github.com/S2E/systemtap.git && \
-    cd systemtap && \
-    git checkout release-${STAP_VER} && \
+RUN curl --insecure -LO https://sourceware.org/ftp/systemtap/releases/systemtap-${STAP_VER}.tar.gz && \
+    tar xf systemtap-${STAP_VER}.tar.gz && \
+    cd systemtap-${STAP_VER} && \
     mkdir build && cd build && \
     ../configure --disable-docs --disable-refdocs --disable-htmldocs && \
     make -j $(nproc) && \
@@ -33,6 +32,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     /kernel-packages/*.deb
 
 # Clean up
-RUN rm -rf systemtap /kernel-packages
+RUN rm -rf systemtap-${STAP_VER}* /kernel-packages
 
 ENTRYPOINT ["/bin/bash"]
