--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,9 @@ add_library(_net OBJECT ${CMAKE_CURRENT_SOURCE_DIR}/lib/net.cpp)
 target_include_directories(_net PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(_net PUBLIC PcapPlusPlus::PcapPlusPlus)
 
+add_library(_usernet OBJECT ${CMAKE_CURRENT_SOURCE_DIR}/lib/usernet.cpp)
+target_include_directories(_usernet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
 #
 # sender
 #
