--- a/depends/docker/Makefile
+++ b/depends/docker/Makefile
@@ -2,7 +2,7 @@ CONTAINERS := $(shell docker ps -a -q)
 NON_TAGGED_IMGS := $(shell docker images | grep '<none>' | awk -F ' ' '{print $$3}')
 IMAGES := $(shell docker images -q)
 S2E_REPO_DIR := $(shell realpath ../../s2e)
-LINUX_VERSION := 4.9.3
+LINUX_VERSION := 6.8.2
 
 all: mimesis
 
@@ -10,10 +10,10 @@ mimesis: systemtap
 	docker tag $<:latest $@:latest
 
 systemtap: s2e \
-	linux-headers-$(LINUX_VERSION)-s2e_$(LINUX_VERSION)-s2e-1_amd64.deb \
-	linux-image-$(LINUX_VERSION)-s2e-dbg_$(LINUX_VERSION)-s2e-1_amd64.deb \
-	linux-image-$(LINUX_VERSION)-s2e_$(LINUX_VERSION)-s2e-1_amd64.deb \
-	linux-libc-dev_$(LINUX_VERSION)-s2e-1_amd64.deb
+	linux-headers-$(LINUX_VERSION)-s2e_$(LINUX_VERSION)-1_amd64.deb \
+	linux-image-$(LINUX_VERSION)-s2e_$(LINUX_VERSION)-1_amd64.deb \
+	linux-image-$(LINUX_VERSION)-s2e-dbg_$(LINUX_VERSION)-1_amd64.deb \
+	linux-libc-dev_$(LINUX_VERSION)-1_amd64.deb
 	docker build -t $@:latest -f $@.dockerfile .
 
 linux-%.deb:
