--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
 cmake_minimum_required(VERSION 3.22)
-project(Mimesis VERSION 0.1 HOMEPAGE_URL https://github.com/kyechou/mimesis LANGUAGES C CXX)
-include("ExternalProject")
+
+set(VCPKG_MANIFEST_DIR
+    "${CMAKE_CURRENT_SOURCE_DIR}/depends"
+    CACHE STRING "Path to vcpkg manifest directory")
+set(CMAKE_TOOLCHAIN_FILE
+    "${CMAKE_CURRENT_SOURCE_DIR}/depends/vcpkg/scripts/buildsystems/vcpkg.cmake"
+    CACHE STRING "Vcpkg toolchain file")
+
+#
+# project
+#
+project(Mimesis VERSION 0.0.1 HOMEPAGE_URL https://github.com/kyechou/mimesis LANGUAGES C CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #
@@ -16,8 +26,8 @@ add_compile_options(-Wall -Wextra -Werror)
 #
 # release/debug compile options
 #
-set(CMAKE_C_FLAGS_RELEASE   "-O3")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+set(CMAKE_C_FLAGS_RELEASE   "-O3 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g")
 set(CMAKE_C_FLAGS_RELWITHDEBINFO   "-O2 -g")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 set(CMAKE_C_FLAGS_DEBUG   "-DENABLE_DEBUG -g3 -fsanitize=address -fno-omit-frame-pointer -fno-common")
@@ -30,15 +40,16 @@ endif()
 #
 # third-party libraries
 #
+include("ExternalProject")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 add_subdirectory(third_party/inotify-cpp EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/sylvan EXCLUDE_FROM_ALL)
 find_package(Threads)
 find_package(PcapPlusPlus REQUIRED)
-find_package(KLEE REQUIRED)
-find_package(LLVM REQUIRED)
-find_package(Z3 REQUIRED)
-find_package(DPDK REQUIRED)
+# find_package(DPDK REQUIRED)
+find_package(KLEE REQUIRED) # built in s2e tree
+find_package(LLVM REQUIRED) # built in s2e tree
+find_package(Z3 REQUIRED)   # built in s2e tree
 
 #
 # build libraries and programs
