--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ include(CTest)
 #
 # Get required testing libraries
 #
-find_package(GTest REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
 #
 # Build libps_tests
@@ -13,7 +13,10 @@ add_executable(libps_tests ${LIBPS_TESTS_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/util.
 target_include_directories(libps_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(libps_tests PRIVATE
     ps
-    gtest::gtest
+    GTest::gtest
+    GTest::gtest_main
+    GTest::gmock
+    GTest::gmock_main
 )
 add_test(NAME "libps_tests" COMMAND libps_tests)
 set_tests_properties(libps_tests PROPERTIES ENVIRONMENT "DATA_DIR=${CMAKE_CURRENT_SOURCE_DIR}/data")
