Add kernel demo NFs

--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -24,6 +24,15 @@ foreach(RTR_SRC ${DEMO_RTR_SRCS})
     target_link_libraries(demo-${STEM} PRIVATE _logger _net)
 endforeach()
 
+set(KERNEL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/kernel)
+FILE(GLOB_RECURSE KERNEL_SRCS CONFIGURE_DEPENDS ${KERNEL_DIR}/demo*.cpp)
+foreach(KERNEL_SRC ${KERNEL_SRCS})
+    get_filename_component(STEM ${KERNEL_SRC} NAME_WE)
+    add_executable(kernel-${STEM} ${KERNEL_SRC} $<TARGET_OBJECTS:_logger> $<TARGET_OBJECTS:_net>)
+    target_link_libraries(kernel-${STEM} PRIVATE _logger _net)
+endforeach()
+
+
 # set(DPDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dpdk)
 # FILE(GLOB DPDK_APPS CONFIGURE_DEPENDS ${DPDK_DIR}/*.c ${DPDK_DIR}/*.cpp)
 # foreach(DPDK_APP ${DPDK_APPS})
@@ -43,3 +52,5 @@ endforeach()
 
 set(HELLO_WORLD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/hello-world)
 add_executable(hello-world-1 ${HELLO_WORLD_DIR}/hw1.cpp)
+
+
