--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -26,7 +26,7 @@ endforeach()
 
 set(KERNEL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/kernel)
 # FILE(GLOB_RECURSE KERNEL_SRCS CONFIGURE_DEPENDS ${KERNEL_DIR}/*.cpp)
-FILE(GLOB_RECURSE KERNEL_SRCS CONFIGURE_DEPENDS ${KERNEL_DIR}/demo*.cpp)
+FILE(GLOB_RECURSE KERNEL_SRCS CONFIGURE_DEPENDS ${KERNEL_DIR}/*.cpp)
 foreach(KERNEL_SRC ${KERNEL_SRCS})
     get_filename_component(STEM ${KERNEL_SRC} NAME_WE)
     add_executable(kernel-${STEM} ${KERNEL_SRC} $<TARGET_OBJECTS:_logger> $<TARGET_OBJECTS:_net>)
