--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vcpkg"]
 	path = depends/vcpkg
 	url = https://github.com/microsoft/vcpkg.git
+[submodule "third_party/libbpf/libbpf"]
+	path = third_party/libbpf/libbpf
+	url = https://github.com/libbpf/libbpf.git
