--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 add_subdirectory(third_party/inotify-cpp EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/sylvan EXCLUDE_FROM_ALL)
 find_package(Threads REQUIRED)
+find_package(cereal CONFIG REQUIRED)
 find_package(PcapPlusPlus REQUIRED)
 # find_package(DPDK REQUIRED)
 find_package(KLEE REQUIRED) # built in s2e tree
