Fix ebpf build system

--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -2,6 +2,14 @@
 # Add debugging compile options for analysis.
 #
 add_compile_options(-g3)
+# NOTE: This `-O2` is crucial for preventing eBPF program verification errors.
+add_compile_options(-O2)
+
+#
+# Build files for eBPF programs.
+#
+find_package(ZLIB REQUIRED) # required by `FindBpfObject.cmake`
+find_package(BpfObject REQUIRED)
 
 #
 # Configure the include directories.
@@ -25,22 +33,21 @@ foreach(KERNEL_SRC ${KERNEL_SRCS})
 endforeach()
 
 set(USER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/user)
-FILE(GLOB USERSPACE_APPS CONFIGURE_DEPENDS ${USER_DIR}/*.cpp)
+FILE(GLOB_RECURSE USERSPACE_APPS CONFIGURE_DEPENDS ${USER_DIR}/*.cpp)
 foreach(USERSPACE_APP ${USERSPACE_APPS})
     get_filename_component(STEM ${USERSPACE_APP} NAME_WE)
     add_executable(user-${STEM} ${USERSPACE_APP} $<TARGET_OBJECTS:_logger> $<TARGET_OBJECTS:_usernet>)
     target_link_libraries(user-${STEM} PRIVATE _logger _usernet)
 endforeach()
 
-
-# add_compile_options(-Wall -Wextra -Werror -O2 -fno-builtin)
-# set(EBPF_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ebpf)
-# FILE(GLOB_RECURSE BPF_SRC_FILES CONFIGURE_DEPENDS ${EBPF_DIR}/*.c)
-# foreach(BPF_SRC_FILE ${BPF_SRC_FILES})
-#     get_filename_component(BPF_STEM ${BPF_SRC_FILE} NAME_WE)
-#     bpf_object(${BPF_STEM} ${BPF_STEM}.c)
-#     target_link_libraries(ebpf-${BPF_STEM} PUBLIC ${BPF_STEM}_skel)
-# endforeach()
+set(EBPF_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ebpf)
+FILE(GLOB_RECURSE BPF_SRC_FILES CONFIGURE_DEPENDS ${EBPF_DIR}/*.bpf.c)
+foreach(BPF_SRC_FILE ${BPF_SRC_FILES})
+    get_filename_component(BPF_STEM ${BPF_SRC_FILE} NAME_WE)
+    bpf_object(${BPF_STEM} ${BPF_SRC_FILE})
+    add_executable(ebpf-${BPF_STEM} ${EBPF_DIR}/${BPF_STEM}.c)
+    target_link_libraries(ebpf-${BPF_STEM} PUBLIC ${BPF_STEM}_skel)
+endforeach()
 
 # set(DPDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dpdk)
 # FILE(GLOB DPDK_APPS CONFIGURE_DEPENDS ${DPDK_DIR}/*.c ${DPDK_DIR}/*.cpp)
