--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory(third_party/libbpf EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/inotify-cpp EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/sylvan EXCLUDE_FROM_ALL)
 find_package(Threads REQUIRED)
+find_package(boost_program_options CONFIG REQUIRED)
 find_package(cereal CONFIG REQUIRED)
 find_package(PcapPlusPlus REQUIRED)
 # find_package(DPDK REQUIRED)
