--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -45,8 +45,8 @@ FILE(GLOB_RECURSE BPF_SRC_FILES CONFIGURE_DEPENDS ${EBPF_DIR}/*.bpf.c)
 foreach(BPF_SRC_FILE ${BPF_SRC_FILES})
     get_filename_component(BPF_STEM ${BPF_SRC_FILE} NAME_WE)
     bpf_object(${BPF_STEM} ${BPF_SRC_FILE})
-    add_executable(ebpf-${BPF_STEM} ${EBPF_DIR}/${BPF_STEM}.c)
-    target_link_libraries(ebpf-${BPF_STEM} PUBLIC ${BPF_STEM}_skel)
+    add_executable(ebpf-${BPF_STEM} ${EBPF_DIR}/${BPF_STEM}.cpp $<TARGET_OBJECTS:_logger>)
+    target_link_libraries(ebpf-${BPF_STEM} PRIVATE ${BPF_STEM}_skel _logger)
 endforeach()
 
 # set(DPDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dpdk)
