--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ include("ExternalProject")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 add_subdirectory(third_party/bpftool EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/libbpf EXCLUDE_FROM_ALL)
+add_subdirectory(third_party/xdp-tools EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/inotify-cpp EXCLUDE_FROM_ALL)
 add_subdirectory(third_party/sylvan EXCLUDE_FROM_ALL)
 find_package(Threads REQUIRED)
